resources/css/app/accounts.css
/*
    /accounts
 */


/*
  accounts box in login and signup
 */
.jumbotron.accounts-box {
  background-color: #FFF;
}

.accounts-bottom-link {
  margin-bottom: 10px;
}

.accounts-bottom-link div {
  width: auto;
}

.accounts-bottom-link div:last-child {
  float: right;
}

/***    ***/

.form-signin {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
}
.form-signin .form-signin-heading,
.form-signin .checkbox {
  margin-bottom: 10px;
}
.form-signin .checkbox {
  font-weight: normal;
}
.form-signin .form-control {
  position: relative;
  height: auto;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  padding: 10px;
  font-size: 16px;
}
.form-signin .form-control:focus {
  z-index: 2;
}
.form-signin input {
  margin-bottom: -1px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}
.form-signin .accounts-last-input {
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.accounts-facebook-signin {
  margin-bottom: 20px;
}

